[package]
name = "ssa"
version = "0.1.1"
authors = ["[vidalpaul]"]
edition = "2021"

[dependencies]
ink_primitives = { version = "4.2", default-features = false }
ink_metadata = { version = "4.2", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "4.2", default-features = false }
ink_storage = { version = "4.2", default-features = false }
ink_lang = { version = "4.2", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
